--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -15,7 +15,7 @@ future==0.18.2
 idna==3.4
 importlib_metadata==7.1.0
 jax==0.4.1
-jaxlib==0.4.1+cuda11.cudnn82
+jaxlib==0.4.1
 joblib==1.2.0
 kiwisolver==1.4.4
 ml-dtypes==0.4.0
