--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ future==0.18.2
 idna==3.4
 importlib_metadata==7.1.0
 jax==0.4.1
-jaxlib==0.4.1
+jaxlib==0.4.6
 joblib==1.2.0
 kiwisolver==1.4.4
 ml-dtypes==0.4.0
@@ -29,7 +29,7 @@ pandas==1.5.2
 PennyLane==0.28.0
 PennyLane-Lightning==0.28.0
 Pillow==9.3.0
-pip==23.3.1
+pip
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7
