--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ dynamic = [
 ]
 description = "LazyQML benchmarking utility to test quantum machine learning models."
 readme = "README.md"
-requires-python = "==3.9"
+requires-python = ">=3.8"
 keywords = [
     "lazyqml",
 ]
