Changed mkdocks plugins

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,13 +40,9 @@ plugins:
     - search
     - mkdocstrings
     - git-revision-date
-    - git-revision-date-localized:
-      exclude:
-        - blog/archive/*
-        - blog/category/*
-    # - git-revision-date-localized:
-          #enable_creation_date: true
-          #type: timeago
+     - git-revision-date-localized:
+          enable_creation_date: true
+          type: timeago
     # - pdf-export
     - mkdocs-jupyter:
           include_source: True
