--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ keywords = [
 ]
 license = {text = "MIT License"}
 authors = [
-  {name = "Diego García Vega, Fernando Álvaro Plou Llorente, Alejandro Leal Castaño", email = "garciavdiego@uniovi.es, ploufernando@uniovi.es, lealcalejandro@uniovi.es"},
+  {name = "Diego García Vega", email = "garciavdiego@uniovi.es"},
+  {name = "Fernando Álvaro Plou Llorente", email = "ploufernando@uniovi.es"},
+  {name = "Alejandro Leal Castaño", email = "lealcalejandro@uniovi.es"}
 ]
 classifiers = [
     "Intended Audience :: Science/Research",
